// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing ExpensesSummary component, multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    10
     
    expenses
     totalling 
    $1,234,567.89
    .
  </p>
</div>
`;

exports[`testing ExpensesSummary component, single expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $1.95
    .
  </p>
</div>
`;
